objects/Inadimpl_ncia_Timeline_Fases__mdt.object
<CustomObject>
    <fields>
        <fullName>Fase_Icon__c</fullName>
        <label>Fase Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fase_Label__c</fullName>
        <label>Fase Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fase_Value__c</fullName>
        <label>Fase Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Indice__c</fullName>
        <label>Índice</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Inadimplência Timeline Fase</label>
    <pluralLabel>Inadimplência Timeline Fases</pluralLabel>
</CustomObject>